--- a/spec/cassettes/fetch_album_data.yml
+++ b/spec/cassettes/fetch_album_data.yml
@@ -36,39 +36,39 @@ http_interactions:
       - 1.1 google
     body:
       encoding: UTF-8
-      string: '{"album":{"artist":"Dr. Dre","mbid":"0001a90e-252d-3af0-8e1c-173c1c4835c3","tags":{"tag":[{"url":"https:\/\/www.last.fm\/tag\/hip-hop","name":"hip-hop"},{"url":"https:\/\/www.last.fm\/tag\/rap","name":"rap"},{"url":"https:\/\/www.last.fm\/tag\/gangsta+rap","name":"gangsta
+      string: '{"album":{"artist":"Dr. Dre","recording_mbid":"0001a90e-252d-3af0-8e1c-173c1c4835c3","tags":{"tag":[{"url":"https:\/\/www.last.fm\/tag\/hip-hop","name":"hip-hop"},{"url":"https:\/\/www.last.fm\/tag\/rap","name":"rap"},{"url":"https:\/\/www.last.fm\/tag\/gangsta+rap","name":"gangsta
         rap"},{"url":"https:\/\/www.last.fm\/tag\/hip+hop","name":"hip hop"},{"url":"https:\/\/www.last.fm\/tag\/g-funk","name":"g-funk"}]},"playcount":"11335573","image":[{"size":"small","#text":"https:\/\/lastfm.freetls.fastly.net\/i\/u\/34s\/6d49060026f44d69cd67a7cffa6e3092.png"},{"size":"medium","#text":"https:\/\/lastfm.freetls.fastly.net\/i\/u\/64s\/6d49060026f44d69cd67a7cffa6e3092.png"},{"size":"large","#text":"https:\/\/lastfm.freetls.fastly.net\/i\/u\/174s\/6d49060026f44d69cd67a7cffa6e3092.png"},{"size":"extralarge","#text":"https:\/\/lastfm.freetls.fastly.net\/i\/u\/300x300\/6d49060026f44d69cd67a7cffa6e3092.png"},{"size":"mega","#text":"https:\/\/lastfm.freetls.fastly.net\/i\/u\/300x300\/6d49060026f44d69cd67a7cffa6e3092.png"},{"size":"","#text":"https:\/\/lastfm.freetls.fastly.net\/i\/u\/300x300\/6d49060026f44d69cd67a7cffa6e3092.png"}],"tracks":{"track":[{"streamable":{"fulltrack":"0","#text":"0"},"duration":118,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Chronic+(Intro)","name":"The
         Chronic (Intro)","@attr":{"rank":1},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":293,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Fuck+Wit+Dre+Day+(And+Everybody%27s+Celebratin%27)","name":"Fuck
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":293,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Fuck+Wit+Dre+Day+(And+Everybody%27s+Celebratin%27)","name":"Fuck
         Wit Dre Day (And Everybody''s Celebratin'')","@attr":{"rank":2},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":355,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Let+Me+Ride","name":"Let
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":355,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Let+Me+Ride","name":"Let
         Me Ride","@attr":{"rank":3},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":273,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Day+the+Niggaz+Took+Over","name":"The
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":273,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Day+the+Niggaz+Took+Over","name":"The
         Day the Niggaz Took Over","@attr":{"rank":4},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":217,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Nuthin%27+But+a+%22G%22+Thang","name":"Nuthin''
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":217,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Nuthin%27+But+a+%22G%22+Thang","name":"Nuthin''
         But a \"G\" Thang","@attr":{"rank":5},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":306,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Deeez+Nuuuts","name":"Deeez
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":306,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Deeez+Nuuuts","name":"Deeez
         Nuuuts","@attr":{"rank":6},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":264,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Lil%27+Ghetto+Boy","name":"Lil''
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":264,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Lil%27+Ghetto+Boy","name":"Lil''
         Ghetto Boy","@attr":{"rank":7},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":254,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/A+Nigga+Witta+Gun","name":"A
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":254,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/A+Nigga+Witta+Gun","name":"A
         Nigga Witta Gun","@attr":{"rank":8},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":228,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Rat-Tat-Tat-Tat","name":"Rat-Tat-Tat-Tat","@attr":{"rank":9},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":173,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+$20+Sack+Pyramid","name":"The
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":228,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Rat-Tat-Tat-Tat","name":"Rat-Tat-Tat-Tat","@attr":{"rank":9},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":173,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+$20+Sack+Pyramid","name":"The
         $20 Sack Pyramid","@attr":{"rank":10},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":244,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Lyrical+Gangbang","name":"Lyrical
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":244,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Lyrical+Gangbang","name":"Lyrical
         Gangbang","@attr":{"rank":11},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":164,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/High+Powered","name":"High
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":164,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/High+Powered","name":"High
         Powered","@attr":{"rank":12},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":64,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Doctor%27s+Office","name":"The
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":64,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Doctor%27s+Office","name":"The
         Doctor''s Office","@attr":{"rank":13},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":289,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Stranded+on+Death+Row","name":"Stranded
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":289,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Stranded+on+Death+Row","name":"Stranded
         on Death Row","@attr":{"rank":14},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":276,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Roach+(The+Chronic+Outro)","name":"The
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":276,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/The+Roach+(The+Chronic+Outro)","name":"The
         Roach (The Chronic Outro)","@attr":{"rank":15},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":116,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Bitches+Ain%27t+Shit","name":"Bitches
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}},{"streamable":{"fulltrack":"0","#text":"0"},"duration":116,"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic\/Bitches+Ain%27t+Shit","name":"Bitches
         Ain''t Shit","@attr":{"rank":16},"artist":{"url":"https:\/\/www.last.fm\/music\/Dr.+Dre","name":"Dr.
-        Dre","mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}}]},"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic","name":"The
+        Dre","recording_mbid":"5f6ab597-f57a-40da-be9e-adad48708203"}}]},"url":"https:\/\/www.last.fm\/music\/Dr.+Dre\/The+Chronic","name":"The
         Chronic","listeners":"810164","wiki":{"published":"02 Feb 2023, 09:48","summary":"\"The
         Chronic\" is the solo debut album of American hip hop artist Dr. Dre, released
         December 15, 1992, on his own record label Death Row Records, and distributed
